--- a/frontend/views/vocabulary/index.twig
+++ b/frontend/views/vocabulary/index.twig
@@ -4,6 +4,9 @@
 <div class="">
 
     {{ lang('frontend', 'Hello') }}
+    <br>
+    {{ html.a(lang('frontend', 'Create Vocabulary'), url(['vocabulary/create']), {'class':'btn btn-success'}) | raw }}
+
     <table class="table">
         <thead>
             <tr>
@@ -13,14 +16,16 @@
                 <th>{{ lang('frontend', 'Description') }}</th>
             </tr>
         </thead>
+        <tbody>
         {% for voc in vocabularies %}
             <tr>
                 <td>{{ voc.name}}</td>
                 <td>{{ voc.description }}</td>
-                <td>{{ html.a(lang('frontend', 'Redakt'), url(['vocabulary/update',{'alias' : voc.id}]), {'class':'btn btn-primary'}) | raw }}</td>
-                <td>{{ html.a(lang('frontend', 'Delete'), 'link', {'class':'btn btn-danger'}) | raw }}</td>
+                <td>{{ html.a(lang('frontend', 'Redakt'), url(['vocabulary/update'], {id : voc.id}), {'class':'btn btn-primary'}) | raw }}</td>
+                <td>{{ html.a(lang('frontend', 'Delete'), url(['vocabulary/delete'], {id : voc.id}), {'class':'btn btn-danger'}) | raw }}</td>
                 <td>{{ html.a('<i class="fa fa-pencil" aria-hidden="true"></i>', 'link', {'class':'btn btn-danger'}) | raw }}</td>
             </tr>
         {% endfor %}
+        </tbody>
     </table>
 </div>
