--- a/frontend/views/simple-translate/index.twig
+++ b/frontend/views/simple-translate/index.twig
@@ -17,9 +17,10 @@
     <div class="form-group">
 
         <!--<?= Html::submitButton(Yii::t('app', 'Submit'), ['class' => 'btn btn-primary']) ?>-->
-        <!--{{ html.a(lang('app', 'Hello'), 'link', {'class':'btn btn-default'}) | raw }}-->
+        {{ html.a(lang('app', 'Translate'), '#', {'class':'btn btn-default trans-btn'}) | raw }}
 
         <input type="submit" value="Сохранить" class="btn btn-primary" />
     </div>
     {{ active_form_end() }}
 </div><!-- weather-station-index -->
+
