--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -18,7 +18,7 @@
             <tr>
                 <td>{{ item.text }}</td>
                 <td>{{ item.translation }}</td>
-                <td>{{ format.asDate('2014-01-01') }}</td>
+                <td>{{ item.date }}</td>
             </tr>
 
 {% endfor %}
