--- a/frontend/views/simple-translate/index.twig
+++ b/frontend/views/simple-translate/index.twig
@@ -28,7 +28,8 @@
         {{ html.a(lang('app', 'Translate'), '#', {'class':'btn btn-default trans-btn'}) | raw }}
 
         <input type="submit" value="Сохранить" class="btn btn-primary" />
+
     </div>
     {{ active_form_end() }}
 </div><!-- weather-station-index -->
-
+<img id="load-img" src="/img/ajax-loader.gif"/>
