--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -3,6 +3,39 @@
 {{ use('yii\i18n\Formatter') }}
 
 {{ voc.name }}
+
+{% set form = active_form_begin({
+'id' : 'translation-form',
+
+
+})%}
+
+<!--{{ form.field(translation, 'id_voc').label(lang('frontend', 'Vocabulary')) | raw }}-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            {{ form.field(translation, 'text').textarea({'rows' : '4'}) | raw }}
+        </div>
+        <div class="col-md-6">
+            {{ form.field(translation, 'translation').textarea({'rows' : '4'}) | raw }}
+        </div>
+    </div>
+</div>
+
+<div class="form-group">
+
+    <!--<?= Html::submitButton(Yii::t('app', 'Submit'), ['class' => 'btn btn-primary']) ?>-->
+    {{ html.a(lang('app', 'Translate'), '#', {'class':'btn btn-default dic-trans-btn'}) | raw }}
+
+    <input type="submit" value="Сохранить" class="btn btn-primary" />
+
+</div>
+</div>
+
+{{ active_form_end() }}
+
+<div id="trans-cont"></div>
+
 <table class="table">
     <thead>
     <tr>
