--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -32,6 +32,17 @@
 </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-6" id="trans-cont">
+
+        </div>
+        <div class="col-md-6" id="trans-example">
+
+        </div>
+    </div>
+</div>
+
 {{ active_form_end() }}
 
 <div id="trans-cont"></div>
