--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -34,7 +34,16 @@
 
 {{ active_form_end() }}
 
-<div id="trans-cont"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6" id="trans-variants">
+
+        </div>
+        <div class="col-md-6" id="trans-example">
+
+        </div>
+    </div>
+</div>
 
 <table class="table">
     <thead>
