--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -1,16 +1,13 @@
 
 {{ use('/common/widgets/LangSwitch') }}
 
-
-{{ voc.name }}
-{{ lang_switch_widget() }}
-
+<h1>{{ lang('frontend', 'Vocabulary') }} : {{ voc.name }}</h1>
+<h3>{{ lang('frontend', 'Language pair') }} : {{ voc.lang_pair }}</h3>
 
 {% set form = active_form_begin({
     'id' : 'translation-form',
 })%}
 
-<!--{{ form.field(translation, 'id_voc').label(lang('frontend', 'Vocabulary')) | raw }}-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6">
@@ -23,8 +20,6 @@
 </div>
 
 <div class="form-group">
-
-    <!--<?= Html::submitButton(Yii::t('app', 'Submit'), ['class' => 'btn btn-primary']) ?>-->
     {{ html.a(lang('app', 'Translate'), '#', {'class':'btn btn-default dic-trans-btn'}) | raw }}
 
     <input type="submit" value="Сохранить" class="btn btn-primary" />
