--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -1,62 +1,85 @@
 
 {{ use('/common/widgets/LangSwitch') }}
 
+
+
 <h1>{{ lang('frontend', 'Vocabulary') }} : {{ voc.name }}</h1>
 <h3>{{ lang('frontend', 'Language pair') }} : {{ voc.lang_pair }}</h3>
+<a class="add-var">add-var</a>
+<div>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">{{ lang('frontend', 'Translator') }}</a></li>
+        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">{{ lang('frontend', 'Vocabulary') }}</a></li>
+    </ul>
 
-{% set form = active_form_begin({
-    'id' : 'translation-form',
-})%}
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="home">
+            {% set form = active_form_begin({
+            'id' : 'translation-form',
+            })%}
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6">
-            {{ form.field(translation, 'text').textarea({'rows' : '4'}) | raw }}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form.field(translation, 'text').textarea({'rows' : '4'}) | raw }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form.field(translation, 'translation').textarea({'rows' : '4'}) | raw }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    {{ html.a(lang('frontend', 'Translate'), '#', {'class':'btn btn-default dic-trans-btn'}) | raw }}
+                    <input type="submit" value="{{ lang('frontend', 'Save') }}" class="btn btn-primary" />
+                </div>
+            </div>
+
+
+
+
+        {{ active_form_end() }}
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-6" id="trans-variants">
+                    <a class="add-var">var</a>
+                </div>
+                <div class="col-md-6" id="trans-example">
+
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-            {{ form.field(translation, 'translation').textarea({'rows' : '4'}) | raw }}
+
+
+        </div>
+        <div role="tabpanel" class="tab-pane" id="profile">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>{{ lang('frontend', 'Text') }}</th>
+                    <th>{{ lang('frontend', 'Translation') }}</th>
+                    <th>{{ lang('frontend', 'Date') }}</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for item in trans %}
+
+
+                    <tr>
+                        <td>{{ item.text }}</td>
+                        <td>{{ item.translation }}</td>
+                        <td>{{ item.date }}</td>
+                    </tr>
+
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-    <div class="form-group">
-        {{ html.a(lang('frontend', 'Translate'), '#', {'class':'btn btn-default dic-trans-btn'}) | raw }}
-        <input type="submit" value="{{ lang('frontend', 'Save') }}" class="btn btn-primary" />
-    </div>
+
 </div>
 
 
-</div>
-
-{{ active_form_end() }}
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-6" id="trans-variants">
-
-        </div>
-        <div class="col-md-6" id="trans-example">
-
-        </div>
-    </div>
-</div>
-
-<table class="table">
-    <thead>
-    <tr>
-        <th>{{ lang('frontend', 'Text') }}</th>
-        <th>{{ lang('frontend', 'Translation') }}</th>
-        <th>{{ lang('frontend', 'Date') }}</th>
-    </tr>
-    </thead>
-    <tbody>
-{% for item in trans %}
 
 
-            <tr>
-                <td>{{ item.text }}</td>
-                <td>{{ item.translation }}</td>
-                <td>{{ item.date }}</td>
-            </tr>
-
-{% endfor %}
-    </tbody>
-</table>
