--- a/frontend/views/vocabulary/create.twig
+++ b/frontend/views/vocabulary/create.twig
@@ -13,20 +13,26 @@
     {{ form.field(voc, 'name').label(lang('frontend', 'Name')) | raw }}
     {{ form.field(voc, 'description') | raw }}
     {{ form.field(voc, 'lang_pair') | raw }}
-    <select class="form-control lang-pair" id="left" name="">
-        <option value="ru">Русский</option>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+            <select class="form-control lang-pair" id="left" name="" data-cur-lang="ru">
+                <option value="ru">Русский</option>
+                <option value="en">Английский</option>
+                <option value="de">Немецкий</option>
+        <option value="pl">Польский</option>
+    </select>
+    </div>
+            <div class="col-md-6">
+    <select class="form-control lang-pair" id="right" name="" data-cur-lang="en">
         <option value="en">Английский</option>
+        <option value="ru">Русский</option>
         <option value="de">Немецкий</option>
         <option value="pl">Польский</option>
     </select>
-
-    <select class="form-control lang-pair" id="right" name="">
-        <option value="en">Английский</option>
-        <option value="ru">Русский</option>
-        <option value="de">Немецкий</option>
-        <option value="pl">Польский</option>
-    </select>
-
+                </div>
+        </div>
+    </div>
     <div class="form-group">
 
         <!--<?= Html::submitButton(Yii::t('app', 'Submit'), ['class' => 'btn btn-primary']) ?>-->
