--- a/frontend/views/vocabulary/create.twig
+++ b/frontend/views/vocabulary/create.twig
@@ -36,7 +36,7 @@
     <div class="form-group">
 
         <!--<?= Html::submitButton(Yii::t('app', 'Submit'), ['class' => 'btn btn-primary']) ?>-->
-        <!--{{ html.a(lang('app', 'Hello'), 'link', {'class':'btn btn-default'}) | raw }}-->
+        <!--{{ html.alang(('app', 'Hello'), 'link', {'class':'btn btn-default'}) | raw }}-->
 
         <input type="submit" value="Сохранить" class="btn btn-primary" />
     </div>
