--- a/frontend/views/vocabulary/index.twig
+++ b/frontend/views/vocabulary/index.twig
@@ -3,27 +3,26 @@
 
 <div class="">
 
-    {{ lang('frontend', 'Hello') }}
+    <h1>{{ lang('frontend', 'Vocabularies') }}</h1>
     <br>
     {{ html.a(lang('frontend', 'Create Vocabulary'), url(['vocabulary/create']), {'class':'btn btn-success'}) | raw }}
 
     <table class="table">
         <thead>
-            <tr>
-                <th>{{ lang('frontend', 'Name') }}</th>
-                <th>{{ lang('frontend', 'Description') }}</th>
-                <th>{{ lang('frontend', 'Description') }}</th>
-                <th>{{ lang('frontend', 'Description') }}</th>
-            </tr>
+        <tr>
+            <th>{{ lang('frontend', 'Name') }}</th>
+            <th>{{ lang('frontend', 'Description') }}</th>
+            <th>{{ lang('frontend', 'Edit') }}</th>
+            <th>{{ lang('frontend', 'Delete') }}</th>
+        </tr>
         </thead>
         <tbody>
         {% for voc in vocabularies %}
             <tr>
                 <td>{{ html.a(voc.name, url(['vocabulary/view'], {id : voc.id}), {'class':'btn btn-primary'}) | raw }}</td>
                 <td>{{ voc.description }}</td>
-                <td>{{ html.a(lang('frontend', 'Redakt'), url(['vocabulary/update'], {id : voc.id}), {'class':'btn btn-primary'}) | raw }}</td>
-                <td>{{ html.a(lang('frontend', 'Delete'), url(['vocabulary/delete'], {id : voc.id}), {'class':'btn btn-danger'}) | raw }}</td>
-                <td>{{ html.a('<i class="fa fa-pencil" aria-hidden="true"></i>', 'link', {'class':'btn btn-danger'}) | raw }}</td>
+                <td>{{ html.a('<i class="fa fa-pencil" aria-hidden="true"></i> '~lang('frontend', 'Edit'), url(['vocabulary/update'], {id : voc.id}), {'class':'btn btn-primary'}) | raw }}</td>
+                <td>{{ html.a('<i class="fa fa-trash-o" aria-hidden="true"></i> '~lang('frontend', 'Delete'), url(['vocabulary/delete'], {id : voc.id}), {'class':'btn btn-danger'}) | raw }}</td>
             </tr>
         {% endfor %}
         </tbody>
