--- a/frontend/views/layouts/main.twig
+++ b/frontend/views/layouts/main.twig
@@ -47,6 +47,7 @@
         ]) %}
     {% else %}
         {% set menuItems = menuItems|merge([
+        {'label' : lang('frontend', 'Signup'), 'url' : ['/site/signup']},
         {'label' : lang('frontend', 'Login'), 'url' : ['/site/login']},
 
         ]) %}
