--- a/frontend/views/vocabulary/view.twig
+++ b/frontend/views/vocabulary/view.twig
@@ -28,10 +28,9 @@
                                 background: #00b3ee;
                                 color: red;
                             }
-
-                            </style>
-                        <div id="trans-trans">
-
+                        </style>
+                        <div id="trans-trans" contenteditable="true">
+                            sadsd
                         </div>
                     </div>
                 </div>
